src/objects/Ficha_de_conocimiento__c.object
<CustomObject>
    <fields>
        <fullName>BPyP_ca_AprobacionDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utilizado para el proceso de aprobacion de Plan de Cuenta</description>
        <label>Aprobacion Director Divisional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_AprobacionDO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo utilizado para el proceso de aprobacion</description>
        <label>Aprobacion Director de Oficina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_AprobacionDP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Utilizado para el proceso de aprobacion</inlineHelpText>
        <label>Aprobacion Director Promocional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPYP_fm_NoCliente__c</fullName>
        <description>Numero de cliente relacionado con el Plan de Cuenta</description>
        <formula>Cliente__r.No_de_cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Número de cliente.</inlineHelpText>
        <label>Número de Cliente (o Prospecto)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_fm_NoGpoFam__c</fullName>
        <description>Numero de Gpo Familiar del cliente asignado al Plan de Cuenta</description>
        <formula>Cliente__r.MX_GroupItBelongs__r.Id</formula>
        <inlineHelpText>Número de Grupo familiar asociado al cliente.</inlineHelpText>
        <label>Número Grupo Familiar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_fm_NombreCliente__c</fullName>
        <description>Nombre del cliente</description>
        <formula>Cliente__r.Name</formula>
        <inlineHelpText>Formula con nombre del cliente</inlineHelpText>
        <label>Nombre Cliente Completo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_fm_NomGpoFam__c</fullName>
        <description>Nombre de Gpo Familiar del cliente relacionado con el Plan de cuenta</description>
        <formula>Cliente__r.MX_GroupItBelongs__r.Name</formula>
        <inlineHelpText>Nombre de Grupo familiar asociado al cliente.</inlineHelpText>
        <label>Nombre Grupo Familiar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_fm_NoPromotor__c</fullName>
        <description>Numero de Promotor BPyP</description>
        <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
        <inlineHelpText>Nombre del Banquero</inlineHelpText>
        <label>Banquero</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_fm_Segmento__c</fullName>
        <description>Segmento del cliente relacionado con el plan de cuenta</description>
        <formula>Cliente__r.Segmento__c</formula>
        <inlineHelpText>Formula del Segmento del cliente relacionado con el plan de cuenta</inlineHelpText>
        <label>Segmento</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>BPyP_lm_Digital__c</fullName>
        <description>Digital
Se informa tenencia de Productos
BPyP</description>
        <inlineHelpText>Digital,
se informa tenencia de Productos</inlineHelpText>
        <label>Digital</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bancomer.com</fullName>
                </value>
                <value>
                    <fullName>Bancomer movil</fullName>
                </value>
                <value>
                    <fullName>Bancomer SMS</fullName>
                </value>
                <value>
                    <fullName>Bancomer Trader</fullName>
                </value>
                <value>
                    <fullName>BBVA Send</fullName>
                </value>
                <value>
                    <fullName>BBVA Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_lm_SegContr__c</fullName>
        <description>Seguros contratados con Bancomer
Se informa tenencia de Productos
BPyP</description>
        <inlineHelpText>Seguros contratados con Bancomer,
se informa tenencia de Productos</inlineHelpText>
        <label>Seguros contratados con Bancomer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Seguro</fullName>
                </value>
                <value>
                    <fullName>Gastos Medicos Mayores Indemnizatorio</fullName>
                </value>
                <value>
                    <fullName>Hogar Seguro Plus</fullName>
                </value>
                <value>
                    <fullName>Inversión Libre Patrimonial</fullName>
                </value>
                <value>
                    <fullName>Meta Segura</fullName>
                </value>
                <value>
                    <fullName>Vida Segura Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
<fields>
        <fullName>BPyP_ls_2GenCurs__c</fullName>
        <description>Han asistido a los cursos para segundas generaciones?
(Solo si es Cliente B. Privada)&quot;
BPyP</description>
        <inlineHelpText>Han asistido a los cursos para segundas generaciones?
(Solo si es Cliente B. Privada)&quot;</inlineHelpText>
        <label>¿Asistió a los cursos de 2° generación?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BpyP_ls_accionesBBVA__c</fullName>
        <description>Tiene acciones de BBVA en Bancomer
BPyP</description>
        <label>Tiene acciones de BBVA en Bancomer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Advanced_Medical__c</fullName>
        <description>¿Tiene Advanced Medical?
BPyP</description>
        <label>¿Tiene Advanced Medical?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_AnnlInc__c</fullName>
        <description>Informar Ingreso Anual por Rango establecido BPyP</description>
        <inlineHelpText>Informar Ingreso Anual por Rango establecido</inlineHelpText>
        <label>Ingreso anual por Rango</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0              500 mil</fullName>
                    <label>0              -500 mil</label>
                </value>
                <value>
                    <fullName>500 mil    1   mill</fullName>
                    <label>500 mil    -1   millón</label>
                </value>
                <value>
                    <fullName>1 mill        5   mill</fullName>
                    <label>1 millón       -5   millones</label>
                </value>
                <value>
                    <fullName>5 mill        10 mill</fullName>
                    <label>5 millones        -10 millones</label>
                </value>
                <value>
                    <fullName>10 mill      15 mill</fullName>
                    <label>10 millones      -15 millones</label>
                </value>
                <value>
                    <fullName>&gt;               15 mill</fullName>
                    <label>&gt;               15 millones</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
<fields>
        <fullName>BPyP_ls_Contactos_Operadores__c</fullName>
        <description>Contactos Operadores
BPyP</description>
        <inlineHelpText>¿El Cliente se apoya en alguna persona para realizar sus Operaciones?</inlineHelpText>
        <label>Contactos Operadores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
<fields>
        <fullName>BPyP_ls_CtcDes__c</fullName>
        <description>Contactos decisores
¿El Cliente toma la decisión sobre su inversión?
BPyP</description>
        <inlineHelpText>Contactos decisores
¿El Cliente toma la decisión sobre su inversión?
BPyP</inlineHelpText>
        <label>Contactos decisores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_ctrlBanc__c</fullName>
        <description>¿Tiene posiciones de control en Bancomer?
BpyP</description>
        <label>¿Tiene posición de control en Bancomer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
<fields>
        <fullName>BPyP_ls_DepEco__c</fullName>
        <description>Indicar si el Cliente tiene dependientes económicos.</description>
        <inlineHelpText>Indicar si el Cliente tiene dependientes económicos.</inlineHelpText>
        <label>Dependientes económicos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_EmpresaFamiliar__c</fullName>
        <description>¿Tiene Empresa Familiar?
BPyP</description>
        <label>¿Tiene Empresa Familiar?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Es_Consejero__c</fullName>
        <description>¿Es Consejero?
BPyP</description>
        <label>¿Es Consejero?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Fideicomiso__c</fullName>
        <description>Indicador de tenencia de Fideicomiso</description>
        <inlineHelpText>Indicador de tenencia de Fideicomiso</inlineHelpText>
        <label>Fideicomiso(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Main_bank__c</fullName>
        <description>¿Cual es su principal Banco?
BPyP</description>
        <label>¿Cual es su principal Banco?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>ACCIVAL</fullName>
                </value>
                <value>
                    <fullName>ACTINVER BANCO</fullName>
                </value>
                <value>
                    <fullName>ACTINVER CASA DE BOLSA</fullName>
                </value>
                <value>
                    <fullName>ACTINVER LLOYD</fullName>
                </value>
                <value>
                    <fullName>AFIRME</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS</fullName>
                </value>
                <value>
                    <fullName>ASEA</fullName>
                </value>
                <value>
                    <fullName>ASP FINANCIERA</fullName>
                </value>
                <value>
                    <fullName>AUTOFIN</fullName>
                </value>
                <value>
                    <fullName>AZTECA</fullName>
                </value>
                <value>
                    <fullName>BAJIO</fullName>
                </value>
                <value>
                    <fullName>BAMSA</fullName>
                </value>
                <value>
                    <fullName>BANAMEX</fullName>
                </value>
                <value>
                    <fullName>BANCEN</fullName>
                </value>
                <value>
                    <fullName>BANCO AMIGO</fullName>
                </value>
                <value>
                    <fullName>BANCO COMPARTAMOS</fullName>
                </value>
                <value>
                    <fullName>BANCO DEUNO</fullName>
                </value>
                <value>
                    <fullName>BANCO FACIL</fullName>
                </value>
                <value>
                    <fullName>BANCO FAMSA</fullName>
                </value>
                <value>
                    <fullName>BANCO INMOBILIARIO MEXICANO</fullName>
                </value>
                <value>
                    <fullName>BANCOMER</fullName>
                </value>
                <value>
                    <fullName>BANCOMEXT</fullName>
                </value>
                <value>
                    <fullName>BANCOPPEL</fullName>
                </value>
                <value>
                    <fullName>BANCO REGIONAL</fullName>
                </value>
                <value>
                    <fullName>BANJERCITO</fullName>
                </value>
                <value>
                    <fullName>BANK ONE</fullName>
                </value>
                <value>
                    <fullName>BANOBRAS</fullName>
                </value>
                <value>
                    <fullName>BANORTE</fullName>
                </value>
                <value>
                    <fullName>BANREGIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_MnIncome__c</fullName>
        <description>Principal fuente de ingresos
&quot;Combo opciones:
- Dividendos
- Sueldos y Salarios
- Honorarios
- Rendimientos
- Rentas
- Actividad Empresarial.
- Otro (especificar)
(catalogo Banco)&quot;</description>
        <inlineHelpText>Principal fuente de ingresos
&quot;Combo opciones:
- Dividendos
- Sueldos y Salarios
- Honorarios
- Rendimientos
- Rentas
- Actividad Empresarial.
- Otro (especificar)</inlineHelpText>
        <label>Principal fuente de ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dividendos</fullName>
                </value>
                <value>
                    <fullName>Sueldos y Salarios</fullName>
                </value>
                <value>
                    <fullName>Honorarios</fullName>
                </value>
                <value>
                    <fullName>Rendimientos</fullName>
                </value>
                <value>
                    <fullName>Rentas</fullName>
                </value>
                <value>
                    <fullName>Actividad Empresarial.</fullName>
                </value>
                <value>
                    <fullName>Otro (especificar)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_N_mina__c</fullName>
        <description>Indicador de si es Cliente Nominado o con Portabilidad</description>
        <inlineHelpText>Indicador de si es Cliente Nominado o con Portabilidad</inlineHelpText>
        <label>Nómina</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_PercBan__c</fullName>
        <description>¿Que % del patrimonio esta en Bancomer?
BPyP</description>
        <label>¿Que % del patrimonio esta en Bancomer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hasta 25%</fullName>
                </value>
                <value>
                    <fullName>de 26% a 50%</fullName>
                </value>
                <value>
                    <fullName>de 51% a 75%</fullName>
                </value>
                <value>
                    <fullName>de 76% a 100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Relaci_n_con_Compass__c</fullName>
        <description>Relación con Compass
BPyP</description>
        <label>Relación con Compass</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Relaci_n_con_Suiza__c</fullName>
        <description>Relación con Suiza
BPyP</description>
        <label>Relación con Suiza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Servicio_TEN__c</fullName>
        <label>Tiene Servicio TEN (solo para UHN)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_ValoracionPromocional__c</fullName>
        <description>Para seleccionar valoracion con el Director Promocional si el propietario del plan de cuenta es division Metropolitana</description>
        <label>Valoración Promocional</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Estatus_Ficha__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excelente</fullName>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Incompleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_pr_CartInstr__c</fullName>
        <description>% Cartera en Instrumentos de Liquidez
BPyP</description>
        <label>% Cartera en Instrumentos de Liquidez</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_pr_FndEst__c</fullName>
        <description>% Cartera en Fondos de Estrategia
BPyP</description>
        <label>% Cartera en Fondos de Estrategia</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_pr_fndInv__c</fullName>
        <description>% Cartera en Fondos de Inversión
BPyP</description>
        <inlineHelpText>% Cartera en Fondos de Inversión
BPyP</inlineHelpText>
        <label>% Cartera en Fondos de Inversión</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_pr_NtEstruct__c</fullName>
        <description>% Notas Estructuradas
BPyP</description>
        <label>% Notas Estructuradas</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_pr_porcentajeCompletado__c</fullName>
        <description>Porcentaje completado del cuestionario</description>
        <label>Porcentaje Completado</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_pr_RtaVar__c</fullName>
        <description>% Cartera en Instrumentos de Renta Variable en directo
BPyP</description>
        <label>% Instrumentos de Renta Variable directo</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Contacto_Decisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contactos decisores
BPyP</description>
        <inlineHelpText>Nombre del contacto decisor.</inlineHelpText>
        <label>Contacto Decisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plan de Cuenta (Contacto Decisor)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Contacto_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contacto Operador
BPyP</description>
        <inlineHelpText>Nombre del contacto operador.</inlineHelpText>
        <label>Contacto Operador</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plan de Cuenta (Contacto Operador)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Empresa_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Empresa relaiconada con cliente de plan de cuenta
BPyP</description>
        <inlineHelpText>Empresa relacionada con cliente en plan de cuenta</inlineHelpText>
        <label>Empresa 1</label>
        <referenceTo>PYME001_Empresas__c</referenceTo>
        <relationshipLabel>Plan de Cuenta</relationshipLabel>
        <relationshipName>Plan_de_Cuenta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Empresa_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Empresa relaiconada con cliente de plan de cuenta
BPyP</description>
        <inlineHelpText>Empresa relacionada con cliente en plan de cuenta</inlineHelpText>
        <label>Empresa 2</label>
        <referenceTo>PYME001_Empresas__c</referenceTo>
        <relationshipLabel>Plan de Cuenta (Empresa 2)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Empresa_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Empresa relaiconada con cliente de plan de cuenta
BPyP</description>
        <inlineHelpText>Empresa relacionada con cliente en plan de cuenta.</inlineHelpText>
        <label>Empresa 3</label>
        <referenceTo>PYME001_Empresas__c</referenceTo>
        <relationshipLabel>Plan de Cuenta (Empresa)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta3</relationshipName>
        <type>Lookup</type>
    </fields>
     <fields>
        <fullName>BPyP_rb_Hijo_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hijo 1
BPyP</description>
        <inlineHelpText>Hijo 1
BPyP</inlineHelpText>
        <label>Hijo 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plan de Cuenta (Hijo 1)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Hijo_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hijo 2
BPyP</description>
        <inlineHelpText>Hijo 2
BPyP</inlineHelpText>
        <label>Hijo 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plan de Cuenta (Hijo 2)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_rb_Hijo_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hijo 3
BPyP</description>
        <inlineHelpText>Hijo 3
BPyP</inlineHelpText>
        <label>Hijo 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plan de Cuenta (Hijo 3)</relationshipLabel>
        <relationshipName>Plan_de_Cuenta7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_Oportunidades_Captaci_n__c</fullName>
        <description>&quot;Oportunidades
Captación&quot;
BpyP</description>
        <label>Oportunidades Captación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incrementador</fullName>
                </value>
                <value>
                    <fullName>Decrementador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_tx_Oportunidades_Cr_dito__c</fullName>
        <description>&quot;Oportunidades
Crédito&quot;
BPyP</description>
        <label>Oportunidades  Crédito</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nomina</fullName>
                </value>
                <value>
                    <fullName>PPI</fullName>
                </value>
                <value>
                    <fullName>PPG</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>TDC Infinite</fullName>
                </value>
                <value>
                    <fullName>TDC Platinum</fullName>
                </value>
                <value>
                    <fullName>Hipotecario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_tx_Oportunidades_Inversiones__c</fullName>
        <description>Oportunidades Inversiones
BPyP</description>
        <label>Oportunidades Inversiones</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahorro Liquido</fullName>
                </value>
                <value>
                    <fullName>Cuenta en Dólares</fullName>
                </value>
                <value>
                    <fullName>Fondos de Inversión</fullName>
                </value>
                <value>
                    <fullName>Maestra Patrimonial Dólares</fullName>
                </value>
                <value>
                    <fullName>Membresía BP</fullName>
                </value>
                <value>
                    <fullName>Meta Ahorro</fullName>
                </value>
                <value>
                    <fullName>Nómina</fullName>
                </value>
                <value>
                    <fullName>Portabilidad</fullName>
                </value>
                <value>
                    <fullName>Producto 21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_tx_Oportunidades_Servicios__c</fullName>
        <description>&quot;Oportunidades
Servicios&quot;
BPyP</description>
        <label>Oportunidades  Servicios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alertas</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Domiciliaciones</fullName>
                </value>
                <value>
                    <fullName>No Financieros</fullName>
                </value>
                <value>
                    <fullName>Traspaso Patrimonial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_tx_Opp_Oferta_No_Financiera__c</fullName>
        <description>&quot;Oportunidades
Oferta No Financiera&quot;
BPyP</description>
        <label>Oportunidades  Oferta No Financiera</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Next Generation - Chicago Booth University - BBVA Madrid</fullName>
                </value>
                <value>
                    <fullName>Wall Street Experience - New York Institute of Finance</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley Immersion - Wharton University - San Francisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_tx_OthIncome__c</fullName>
        <description>Principal fuente de ingresos al seleccionar otro</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Principal fuente de ingresos al seleccionar otro</inlineHelpText>
        <label>Otra fuente de ingresos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_Plan_a_Corto_Plazo__c</fullName>
        <description>Plan a Corto Plazo
BPyP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Descripción de los planes a corto plazo.</inlineHelpText>
        <label>Plan a Corto Plazo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_Plan_a_Largo_Plazo__c</fullName>
        <description>Plan a Largo Plazo
BPyP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Descripción de los planes a largo plazo.</inlineHelpText>
        <label>Plan a Largo Plazo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_Saldo_en_Captaci_n__c</fullName>
        <description>Saldo en Captación
BPyP</description>
        <label>Saldo en Captación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>BPyP_tx_Saldo_ILP__c</fullName>
        <description>Saldo ILP
BPyP</description>
        <label>Saldo ILP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Fichas_de_conocimiento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comentarios_DDDR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios DD/DR</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comentarios_DO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios DO</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>División</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <formula>TEXT(Owner:User.Divisi_n__c)</formula>
        <label>División Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empleados_en_Cheque__c</fullName>
        <label>% Empleados en Cheque</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>